# opencv-learn

./: .gitignore  README.md  canny_edge.py  colors.py  corners.py  hand_detection.py  hough_line.py  pyproject.toml  utils.py  videos_rw.py
projects/: ascii-face.py  asciimasks.py  blockface.py  face-glitch.py  hand_detection.py  utils.py  volume-ctrl.py
scripts/: convolution.py  filtering.py  gradient.py  histogram.py  hsv.py  images_rw.py  pixels_rw.py  resizing.py  sift.py  thresholding.py  video_test.py
