[project]
name = "opencv-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mediapipe>=0.10.32",
    "opencv-python>=4.13.0.90",
    "pandas>=3.0.0",
    "pyqt6>=6.10.2",
    "scikit-image>=0.26.0",
    "volume-control>=0.9.2",
]
